// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Status component matches snapshot (count dot) 1`] = `
<div
  className="fds-statusWrapper alignChild--center--center"
>
  <div
    className="fds-status padding--x--s fontSize--xs alignChild--center--center shape--circle fds-status--dot color--white color--aqua bgColor--aqua"
  >
    <span
      className="fds-status-label wrap--singleLine--truncate"
    />
  </div>
</div>
`;

exports[`Status component matches snapshot (count with label) 1`] = `
<div
  className="fds-statusWrapper alignChild--center--center"
>
  <div
    className="fds-status padding--x--s fontSize--xs alignChild--center--center color--aqua"
  >
    <span
      className="fds-status-label wrap--singleLine--truncate"
    >
      42
    </span>
  </div>
</div>
`;

exports[`Status component matches snapshot (default props, has label) 1`] = `
<div
  className="fds-statusWrapper alignChild--center--center"
>
  <div
    className="fds-status padding--x--s fontSize--xs alignChild--center--center color--white bgColor--red"
  >
    <span
      className="fds-status-label wrap--singleLine--truncate"
    >
      test
    </span>
  </div>
</div>
`;

exports[`Status component matches snapshot (update dot) 1`] = `
<div
  className="fds-statusWrapper alignChild--center--center"
>
  <div
    className="fds-status padding--x--s fontSize--xs alignChild--center--center shape--circle fds-status--dot color--white color--white bgColor--red"
  >
    <span
      className="fds-status-label wrap--singleLine--truncate"
    />
  </div>
</div>
`;
